--- a/quiz/arrow.html
+++ b/quiz/arrow.html
@@ -14,8 +14,8 @@
     <script>
         const obj = {
             msg: 'Hello World',
-            hello: function () {
-                document.getElementById('demo').innerHTML += this.msg;
+            hello: () => {
+                document.getElementById('demo').innerHTML += obj.msg;
             }
         };
         window.addEventListener('load', function () {
